@@ -1,3 +1,3 @@
 module RailsAppsPages
-  VERSION = "0.5.10"
+  VERSION = "0.5.11"
 end
